<resources>
    <string name="app_name">趣分享</string>
    <string name="setting" translatable="false">设置</string>
    <string name="resume" translatable="false">Resume</string>
    <string name="cancel" translatable="false">取消</string>
    <string name="title_dialog" translatable="false">Tips</string>
    <string name="not_wx_pay" translatable="false">您未安装最新版本微信，不支持微信支付，请安装或升级微信版本</string>
    <string name="message_permission_rationale">授予下列权限以继续程序:\n\n%1$s</string>
    <string name="message_overlay_failed">您的电话不允许我们使用其他应用程序.</string>
    <string name="message_permission_always_failed">我们需要以下权限，请在设置中为我们开启：\n\n%1$s</string>
    <string name="share_title" translatable="false">神奇动物世界</string>
    <string name="share_content" translatable="false">看新闻赚钱！</string>

    <string name="wx_num" translatable="false">123465789</string>
    <string name="qq_num" translatable="false">123465789</string>

    <!--提示语-->
    <string name="error_phone" translatable="false">手机号码格式错误</string>
    <string name="error_phone1" translatable="false">手机号码或验证码为空</string>
    <string name="error_" translatable="false">请输入完整</string>
    <string name="error_nickname" translatable="false">请输入您的昵称</string>
    <string name="error_pwd_length" translatable="false">密码位于6~16位</string>
    <string name="please_phone" translatable="false">请输入手机号码</string>
    <string name="please_code" translatable="false">请输入验证码</string>
    <string name="please_pwd1" translatable="false">请再次输入密码</string>
    <string name="please_pwd2" translatable="false">两次密码不一致</string>
    <string name="please_pwd3" translatable="false">请输入密码</string>
    <string name="error_1" translatable="false">请阅读协议</string>


    <string name="home_search_title" translatable="false">点击查看如何赚钱</string>
    <string name="home_search" translatable="false">点击搜索</string>
    <string name="selection_column" translatable="false">选择栏目</string>
    <string name="income" translatable="false">收入明细</string>
    <string name="forwarding" translatable="false">转发赚钱规则</string>
    <string name="forwarding1" translatable="false">转发赚钱</string>
    <string name="forwarding2" translatable="false">赚钱规则</string>
    <string name="make" translatable="false">赚钱攻略</string>
    <string name="make1" translatable="false">赚钱秘籍</string>
    <string name="details" translatable="false">文章详情</string>
    <string name="finger_guide" translatable="false">新手指南</string>
    <string name="me" translatable="false">我的</string>
    <string name="account_balance" translatable="false">账户余额</string>
    <string name="accumulated_income" translatable="false">累计收入</string>
    <string name="bind_phone" translatable="false">绑定手机号</string>
    <string name="withdrawal" translatable="false">立即提现</string>
    <string name="income_details" translatable="false">收入明细</string>
    <string name="contact" translatable="false">联系我们</string>
    <string name="set" translatable="false">应用设置</string>
    <string name="login" translatable="false">登录</string>
    <string name="register" translatable="false">注册</string>
    <string name="input_phone" translatable="false">请输入手机号码</string>
    <string name="input_code" translatable="false">请输入验证码</string>
    <string name="input_pwd" translatable="false">请输入密码</string>
    <string name="input_invitation" translatable="false">请输入邀请码</string>
    <string name="login1" translatable="false">立即登录</string>
    <string name="retrieve_pwd" translatable="false">找回密码</string>
    <string name="three_login" translatable="false">第三方登录</string>
    <string name="copy" translatable="false">点击复制</string>
    <string name="wenti" translatable="false">注册登录遇到问题请添加客服微信</string>
    <string name="wenti1" translatable="false">使用遇到问题请添加客服微信：  </string>
    <string name="submit" translatable="false">确定</string>
    <string name="wancehng" translatable="false">完成</string>
    <string name="method_withdrawal" translatable="false">提现方式</string>
    <string name="input_withdrawal" translatable="false">请选择提现方式</string>
    <string name="input_withdrawal1" translatable="false">￥ 请选择提现金额</string>
    <string name="full_withdrawal" translatable="false">全部提现</string>
    <string name="withdrawal1" translatable="false">提现</string>
    <string name="withdrawal2" translatable="false">选择提现方式</string>
    <string name="yhk" translatable="false">银行卡</string>
    <string name="zfb" trande_actionbar_sub_discussionslatable="false">支付宝</string>
    <string name="wx" translatable="false">微信</string>
    <string name="input_pay_pwd" translatable="false">请输入支付密码</string>
    <string name="balance_withdrawal" translatable="false">余额提现</string>
    <string name="verification_instructions" translatable="false">（验证说明：商务合作）</string>
    <string name="privacy_protocol" translatable="false">隐私协议</string>
    <string name="reminder" translatable="false">到账提醒</string>
    <string name="clear_cache" translatable="false">清除缓存</string>
    <string name="clear" translatable="false">清除</string>
    <string name="share_money" translatable="false">分享赚钱</string>
    <string name="share_money1" translatable="false">分享任意文章到微信群，好友或者朋友圈</string>
    <string name="share_money2" translatable="false">坐等收益</string>
    <string name="share_money3" translatable="false">分享的文章，每被有效阅读一次都会获得 0.01~0.1元收益</string>
    <string name="share_money4" translatable="false">小技巧</string>
    <string name="share_money5" translatable="false">分享时写上一句精美点评，赚钱更快更多</string>
    <string name="input_pay_pwd1" translatable="false">请输入支付密码（6位数）</string>
    <string name="input_pay_pwd2" translatable="false">请再次输入支付密码（6位数）</string>
    <string name="set_pay_pwd" translatable="false">设置支付密码</string>
    <string name="add_bank" translatable="false">添加银行卡</string>
    <string name="me_bank" translatable="false">我的银行卡</string>
    <string name="cash_record" translatable="false">提现记录</string>
    <string name="bank_num" translatable="false">银行卡号：</string>
    <string name="input_bank_num" translatable="false">请输入银行卡号</string>
    <string name="input_bank" translatable="false">开户银行：</string>
    <string name="input_open_bank" translatable="false">请输入开户银行</string>
    <string name="open_user" translatable="false">开  卡 人：</string>
    <string name="input_user_name" translatable="false">请输入开卡人姓名</string>
    <string name="id" translatable="false">身份证号：</string>
    <string name="input_id" translatable="false">请输入身份证号</string>
    <string name="phone" translatable="false">手 机  号：</string>
    <string name="verification_bank" translatable="false">验证银行卡</string>
    <string name="yanzheng" translatable="false">验证</string>
    <string name="invitation_strategy" translatable="false"> 邀请攻略</string>
    <string name="my_apprentice" translatable="false">邀请人数</string>
    <string name="apprentice_desc" translatable="false">徒弟详情</string>
    <string name="invite_friends" translatable="false">邀请好友</string>
    <string name="invite_friends1" translatable="false">成功邀请一个好友</string>
    <string name="invite_friends2" translatable="false">好友\n帮挣</string>
    <string name="invite_friends3" translatable="false">一键邀请好友</string>
    <string name="apprentice" translatable="false">邀请</string>
    <string name="apprentice1" translatable="false">二维码收徒</string>
    <string name="my_income" translatable="false">我的总收入</string>
    <string name="contribution" translatable="false">今日贡献</string>
    <string name="yesterday_contribution" translatable="false">昨日贡献</string>
    <string name="continue_collect" translatable="false">继续领取</string>
    <string name="distribution_rewards" translatable="false">奖励分布</string>
    <string name="member" translatable="false">会员协议</string>
    <string name="action_center" translatable="false">活动中心</string>
    <string name="popular_comments" translatable="false">热门评论</string>
    <string name="hot_search" translatable="false">热门搜素</string>
    <string name="history_search" translatable="false">历史搜素</string>
    <string name="xie_comments" translatable="false">写评论</string>
    <string name="comments" translatable="false">评论</string>
    <string name="collect_articles" translatable="false">收藏文章</string>
    <string name="collect_video" translatable="false">收藏视频</string>
    <string name="send" translatable="false">发送</string>
    <string name="my_collection" translatable="false">我的收藏</string>
    <string name="my_evaluate" translatable="false">我的评价</string>
    <string name="enquiry" translatable="false">违规查询</string>
    <string name="cooperation" translatable="false">广告合作</string>
    <string name="historical" translatable="false">历史记录</string>
    <string name="pyq" translatable="false">朋友圈</string>
    <string name="adv" translatable="false">广告</string>
    <string name="release" translatable="false">发表</string>
    <string name="yy1" translatable="false">请输入内容</string>
    <string name="yy2" translatable="false">至少选择一样发布</string>
    <string name="yy3" translatable="false">看了这么多，留下你的评论在趣分享吧!!! </string>
    <string name="yy4" translatable="false">点击查看如何赚钱</string>
    <string name="location" translatable="false">所在位置</string>
    <string name="head" translatable="false">头像</string>
    <string name="nick" translatable="false">名字</string>
    <string name="sex" translatable="false">性别</string>
    <string name="user_info" translatable="false">我的信息</string>
    <string name="set_name" translatable="false">设置名字</string>
    <string name="submit1" translatable="false">完成</string>
    <string name="nan" translatable="false">男</string>
    <string name="nv" translatable="false">女</string>
    <string name="set_sex" translatable="false">设置性别</string>


</resources>
