<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints"
        android:orientation="vertical">

        <include layout="@layout/include_top"/>

        <android.support.constraint.ConstraintLayout
            android:padding="@dimen/px50"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_bank_num"
                android:text="@string/bank_num"
                app:layout_constraintTop_toTopOf="@id/et_bank_num"
                app:layout_constraintBottom_toBottomOf="@id/et_bank_num"
                style="@style/Tv15black"/>

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_bank_num"
                android:layout_width="0dp"
                android:inputType="phone"
                android:layout_marginLeft="@dimen/px20"
                android:drawableRight="@mipmap/jtt01"
                android:padding="@dimen/px40"
                android:paddingBottom="@dimen/px40"
                android:textSize="@dimen/size30"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@id/tv_bank_num"
                android:hint="@string/input_bank_num"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_input_bank"
                android:text="@string/input_bank"
                app:layout_constraintTop_toTopOf="@id/et_open_bank"
                app:layout_constraintBottom_toBottomOf="@id/et_open_bank"
                style="@style/Tv15black"/>

            <android.support.v7.widget.AppCompatEditText
                android:layout_marginTop="@dimen/px50"
                app:layout_constraintTop_toBottomOf="@id/tv_bank_num"
                android:id="@+id/et_open_bank"
                android:layout_width="0dp"
                android:layout_marginLeft="@dimen/px20"
                android:drawableRight="@mipmap/jtt01"
                android:padding="@dimen/px40"
                android:paddingBottom="@dimen/px40"
                android:textSize="@dimen/size30"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@id/tv_input_bank"
                android:hint="@string/input_open_bank"
                android:layout_height="wrap_content" />


            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_open_user"
                android:text="@string/open_user"
                app:layout_constraintTop_toTopOf="@id/et_user_name"
                app:layout_constraintBottom_toBottomOf="@id/et_user_name"
                style="@style/Tv15black"/>

            <android.support.v7.widget.AppCompatEditText
                android:layout_marginTop="@dimen/px50"
                app:layout_constraintTop_toBottomOf="@id/tv_input_bank"
                android:id="@+id/et_user_name"
                android:layout_width="0dp"
                android:layout_marginLeft="@dimen/px20"
                android:drawableRight="@mipmap/jtt01"
                android:padding="@dimen/px40"
                android:paddingBottom="@dimen/px40"
                android:textSize="@dimen/size30"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@id/tv_input_bank"
                android:hint="@string/input_user_name"
                android:layout_height="wrap_content" />



            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_id"
                android:text="@string/id"
                app:layout_constraintTop_toTopOf="@id/et_id"
                app:layout_constraintBottom_toBottomOf="@id/et_id"
                style="@style/Tv15black"/>

            <android.support.v7.widget.AppCompatEditText
                android:layout_marginTop="@dimen/px50"
                app:layout_constraintTop_toBottomOf="@id/tv_open_user"
                android:id="@+id/et_id"
                android:layout_width="0dp"
                android:layout_marginLeft="@dimen/px20"
                android:drawableRight="@mipmap/jtt01"
                android:padding="@dimen/px40"
                android:paddingBottom="@dimen/px40"
                android:textSize="@dimen/size30"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@id/tv_input_bank"
                android:hint="@string/input_id"
                android:layout_height="wrap_content" />


            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_phone"
                android:text="@string/phone"
                app:layout_constraintTop_toTopOf="@id/et_verification_bank"
                app:layout_constraintBottom_toBottomOf="@id/et_verification_bank"
                style="@style/Tv15black"/>

            <android.support.v7.widget.AppCompatEditText
                android:layout_marginTop="@dimen/px50"
                app:layout_constraintTop_toBottomOf="@id/tv_id"
                android:id="@+id/et_verification_bank"
                android:layout_width="0dp"
                android:inputType="phone"
                android:maxLength="11"
                android:layout_marginLeft="@dimen/px20"
                android:drawableRight="@mipmap/jtt01"
                android:padding="@dimen/px40"
                android:paddingBottom="@dimen/px40"
                android:textSize="@dimen/size30"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@id/tv_input_bank"
                android:hint="@string/input_phone"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:id="@+id/ly_agreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/px100"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/tv_phone">

                <CheckBox
                    android:id="@+id/cb_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:checked="true"
                    android:button="@drawable/cb_select"
                    android:paddingLeft="@dimen/px20"
                    android:text="我已阅读"
                    android:textColor="@color/tab_gray"
                    android:textSize="@dimen/px24" />

                <TextView
                    android:id="@+id/tv_agreement"
                    style="@style/Tv12red"
                    android:text="《趣转发相关协议》" />

            </LinearLayout>


            <com.flyco.roundview.RoundTextView
                android:id="@+id/bt_submit"
                app:layout_constraintTop_toBottomOf="@id/ly_agreement"
                style="@style/RoundBlueTextView"
                android:layout_marginLeft="@dimen/px40"
                android:layout_marginTop="@dimen/px100"
                android:layout_marginRight="@dimen/px40"
                android:text="@string/yanzheng"
                app:rv_backgroundColor="@color/red_FF7D78"
                app:rv_cornerRadius="@dimen/px40" />

        </android.support.constraint.ConstraintLayout>

    </LinearLayout>

</layout>