<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingConstraints">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/zcbj01" />

        <include
            android:id="@+id/top"
            layout="@layout/include_top" />

        <com.flyco.roundview.RoundLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/px40"
            android:layout_marginTop="@dimen/px150"
            android:layout_marginRight="@dimen/px40"
            android:orientation="vertical"
            android:padding="@dimen/px20"
            app:layout_constraintTop_toBottomOf="@id/top"
            app:rv_backgroundColor="@color/white"
            app:rv_cornerRadius="@dimen/px20"
            app:rv_strokeColor="@color/red_FF7D78"
            app:rv_strokeWidth="@dimen/px1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_marginLeft="@dimen/px40"
                    android:text="@string/method_withdrawal"
                    style="@style/Tv15black" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_cash"
                    android:padding="@dimen/px20"
                    android:layout_marginLeft="@dimen/px40"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:background="?actionBarItemBackground"
                    android:hint="@string/input_withdrawal"
                    style="@style/Tv15black" />

                <android.support.v7.widget.AppCompatImageView
                    android:background="@mipmap/jtt40"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <View  style="@style/divider_1"/>

            <android.support.v7.widget.AppCompatTextView
                android:padding="@dimen/px20"
                android:visibility="gone"
                android:text="每次提现最低100元"
                style="@style/Tv15black" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/et_price"
                android:padding="@dimen/px20"
                android:background="@null"
                android:textSize="@dimen/size30"
                android:inputType="numberDecimal"
                android:hint="@string/input_withdrawal1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View  style="@style/divider_1"/>

            <LinearLayout
                android:padding="@dimen/px20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_income"
                    android:layout_weight="1"
                    style="@style/Tv15gray" />

                <android.support.v7.widget.AppCompatTextView
                    android:visibility="gone"
                    android:id="@+id/tv_full_withdrawa1"
                    android:text="@string/full_withdrawal"
                    style="@style/Tv15red" />

            </LinearLayout>

            <com.yc.quzhuanfa.weight.WithScrollGridView
                android:id="@+id/gridview"
                android:horizontalSpacing="@dimen/px20"
                android:verticalSpacing="@dimen/px20"
                android:layout_width="match_parent"
                android:numColumns="3"
                android:layout_height="wrap_content"/>

            <com.flyco.roundview.RoundTextView
                android:id="@+id/bt_submit"
                style="@style/RoundBlueTextView"
                android:layout_marginLeft="@dimen/px40"
                android:layout_marginTop="@dimen/px100"
                android:layout_marginRight="@dimen/px40"
                android:text="@string/withdrawal1"
                app:rv_backgroundColor="@color/red_FF7D78"
                app:rv_cornerRadius="@dimen/px40" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_cash_record"
                android:text="@string/cash_record"
                android:padding="@dimen/px20"
                android:layout_margin="@dimen/px20"
                android:background="?actionBarItemBackground"
                android:layout_gravity="right"
                style="@style/Tv15red" />

        </com.flyco.roundview.RoundLinearLayout>


    </android.support.constraint.ConstraintLayout>

</layout>