<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <android.support.constraint.ConstraintLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:paddingTop="@dimen/px20"
        tools:ignore="MissingConstraints"
        android:layout_height="match_parent">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_can"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="@dimen/px20"
            android:text="@string/cancel"
            android:padding="@dimen/px20"
            style="@style/Tv15black"/>

        <com.flyco.roundview.RoundTextView
            android:id="@+id/tv_release"
            android:layout_margin="@dimen/px20"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:rv_backgroundColor="@color/red_FF7D78"
            android:textColor="@color/white"
            android:text="@string/release"
            android:ems="5"
            android:gravity="center"
            android:padding="@dimen/px20"
            style="@style/Tv12black"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_text"
            app:layout_constraintTop_toBottomOf="@id/tv_can"
            android:layout_marginTop="@dimen/px50"
            android:hint="@string/yy1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="@dimen/px80"
            android:layout_marginRight="@dimen/px80"
            android:layout_width="match_parent"
            android:textSize="@dimen/size30"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.RecyclerView
            app:layout_constraintTop_toBottomOf="@id/et_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="@dimen/px80"
            android:layout_marginTop="@dimen/px100"
            android:layout_marginRight="@dimen/px80"
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never" />

        <View
            android:id="@+id/v1"
            app:layout_constraintTop_toBottomOf="@id/recyclerView"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_margin="@dimen/px80"
            style="@style/divider_1"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_location"
            android:text="@string/location"
            app:layout_constraintLeft_toLeftOf="@id/v1"
            app:layout_constraintTop_toBottomOf="@id/v1"
            android:drawableLeft="@mipmap/dingwei1"
            android:layout_width="0dp"
            android:padding="@dimen/px30"
            android:drawablePadding="@dimen/px20"
            app:layout_constraintRight_toRightOf="parent"
            android:drawableRight="@mipmap/jinru1"
            style="@style/Tv15black" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_address"
            android:layout_marginRight="@dimen/px80"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_location"
            app:layout_constraintBottom_toBottomOf="@id/tv_location"
            style="@style/Tv12black" />

        <View
            app:layout_constraintTop_toBottomOf="@id/tv_location"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="@dimen/px80"
            android:layout_marginRight="@dimen/px80"
            style="@style/divider_1"/>

    </android.support.constraint.ConstraintLayout>

</layout>